Now, a lattice can materialize an aggregate-join and use it in a subsequent query.
Add AggregateFilterTransposeRule, to help crystallize a query into a form that matches an aggregate table.

Minor fixes and tweaks to BreadthFirstIterator, DepthFirstIterator, ArrayTable, StarTable, Mappings.